# screen-time-tracker

./: .cursorrules  README.md  index.html  package.json  popover.html  vite.config.ts
.cursor/rules/: backend-rust.mdc  day-lifecycle.mdc  frontend-ts.mdc  menu-bar-ui.mdc  project-overview.mdc
src/: main.ts  popover.css  popover.ts  reports.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
