[package]
name = "screen-time-tracker"
version = "0.1.0"
description = "Screen Time Tracker - A desktop application to track screen time usage"
authors = ["abhishek"]
edition = "2021"
license = "MIT"
repository = "https://github.com/abhishek/screen-time-tracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screen_time_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
objc = "0.2"
cocoa = "0.25"
notify = "6"

